@@ -280,6 +280,7 @@ class IMP_Imap
      *
      * @param string $mailbox  The mailbox to check. Must be an IMAP mailbox.
      *
+     * @return string  The mailbox UIDVALIDITY.
      * @throws Horde_Exception
      */
     public function checkUidvalidity($mailbox)
@@ -303,6 +304,8 @@ class IMP_Imap
         if ($this->_uidvalid[$mailbox]) {
             throw new Horde_Exception(_("Mailbox structure on server has changed."));
         }
+
+        return $_SESSION['imp']['cache']['uidvalid'][$mailbox];
     }
 
     /**
